add: Constant, WorldTest, Position; fix: World-print

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,11 @@
 /ast/
-/exceptions/
-/parse/
-/test/
-/util/
-/tests/
-/interprete/
-/interpret/
-/simulate/
-/intial/
 /console/
+/exceptions/
+/execute/
+/interpret/
+/intial/
+/parse/
+/simulate/
+/tests/
+/testsA5/
+/util/
