fix bugs in mutation from a4 feedback

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,5 @@
-/console/
-/simulate/
-/execute/
-/executor/
-/testexecutor/
-/interpret/
 /testsA5/
-/ast/
-/intial/
-/constant/
-/parse/
 /util/
+/ast/
+/tests/
+/testsA4/
